--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -10,7 +10,7 @@ body{
 	align-items: center;
 	text-align: center;
 	width: 400px;
-	max-width: 100%;
+	max-width: 95%;
 	transform: translate(-50%, -50%);
 	position: fixed;
 	left: 50%;
@@ -19,6 +19,7 @@ body{
 	box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.06);
 	border-radius: 10px;
 	z-index: 101;
+	margin: 0 auto;
 }
 .popup__form .popup-close {
     position: absolute;
@@ -71,7 +72,7 @@ body{
 	background: linear-gradient(180deg, #ffe496 0%, #ffbd00 100%);
 }
 @media (max-width: 420px){
-   body {
+ /*  body {
     min-width: 100%;
     overflow-x: hidden;
     padding-bottom: 100px;
@@ -84,5 +85,6 @@ body{
     overflow-x: scroll;
     left: 0px;
     transform: translate(0px, 0px);
-   }
+   }*/
+
 }
