--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -15,7 +15,7 @@ body{
 	position: fixed;
 	left: 50%;
 	top: 50%;
-	padding: 29px 32px;
+	padding: 40px 32px;
 	box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.06);
 	border-radius: 10px;
 	z-index: 101;
@@ -71,20 +71,24 @@ body{
 .popup__button:hover {
 	background: linear-gradient(180deg, #ffe496 0%, #ffbd00 100%);
 }
-@media (max-width: 420px){
- /*  body {
+@media (max-width: 570px) and (max-height: 320px){
+/*   body 
     min-width: 100%;
     overflow-x: hidden;
     padding-bottom: 100px;
-    background: #fff;
    }
    .popup__form{
     top: 0px!important;
     width: 100%;
-    height: 100%;
+    height: 50%;
     overflow-x: scroll;
     left: 0px;
     transform: translate(0px, 0px);
    }*/
+   .popup__form{
+   	padding-top: 29px;
+   	height: 94%;
+   	/*max-height: 335px;*/
+   }
 
 }
