--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -71,8 +71,8 @@ body{
 .popup__button:hover {
 	background: linear-gradient(180deg, #ffe496 0%, #ffbd00 100%);
 }
-@media (max-width: 570px) and (max-height: 320px){
-/*   body 
+@media (orientation:landscape){
+/*   body {
     min-width: 100%;
     overflow-x: hidden;
     padding-bottom: 100px;
@@ -86,9 +86,8 @@ body{
     transform: translate(0px, 0px);
    }*/
    .popup__form{
-   	padding-top: 29px;
    	height: 94%;
-   	/*max-height: 335px;*/
+   	max-height: 335px;
    }
 
 }
