--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -71,7 +71,7 @@ body{
 .popup__button:hover {
 	background: linear-gradient(180deg, #ffe496 0%, #ffbd00 100%);
 }
-@media (orientation:landscape){
+@media (min-height: 280px) and (max-height: 340px){
 /*   body {
     min-width: 100%;
     overflow-x: hidden;
@@ -86,8 +86,9 @@ body{
     transform: translate(0px, 0px);
    }*/
    .popup__form{
+   	padding: 20px 32px;
    	height: 94%;
-   	max-height: 335px;
+   	overflow: auto;
    }
 
 }
