--- a/css/popup-form-style.css
+++ b/css/popup-form-style.css
@@ -71,7 +71,7 @@ body{
 .popup__button:hover {
 	background: linear-gradient(180deg, #ffe496 0%, #ffbd00 100%);
 }
-@media (min-height: 280px) and (max-height: 340px){
+@media (min-height: 265px) and (max-height: 340px){
 /*   body {
     min-width: 100%;
     overflow-x: hidden;
@@ -90,5 +90,8 @@ body{
    	height: 94%;
    	overflow: auto;
    }
-
+   .popup__form p{
+   	font-size: 19px;
+   	margin-bottom: 5px;
+   }
 }
